@@ -14,6 +14,8 @@ anchor_bottom = 1.0
 grow_horizontal = 2
 grow_vertical = 2
 script = ExtResource("1_s27tx")
+metadata/_edit_vertical_guides_ = [263.0, 193.0, 444.0, 637.0]
+metadata/_edit_horizontal_guides_ = [1465.0, 691.0]
 
 [node name="VBoxContainer" type="VBoxContainer" parent="."]
 layout_mode = 1
@@ -48,9 +50,9 @@ anchor_right = 1.0
 anchor_bottom = 1.0
 grow_horizontal = 2
 grow_vertical = 2
-theme_override_constants/margin_left = 5
+theme_override_constants/margin_left = 10
 theme_override_constants/margin_top = 0
-theme_override_constants/margin_right = 10
+theme_override_constants/margin_right = 5
 theme_override_constants/margin_bottom = 200
 
 [node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/OppBoard/MarginContainer"]
@@ -85,7 +87,7 @@ layout_mode = 2
 layout_mode = 2
 size_flags_horizontal = 3
 
-[node name="MarginContainer" type="CenterContainer" parent="VBoxContainer/OppBoard/MarginContainer/HBoxContainer/Center"]
+[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/OppBoard/MarginContainer/HBoxContainer/Center"]
 layout_mode = 1
 anchors_preset = 14
 anchor_top = 0.5
@@ -95,6 +97,8 @@ offset_top = -224.0
 offset_bottom = 224.0
 grow_horizontal = 2
 grow_vertical = 2
+theme_override_constants/margin_left = 67
+theme_override_constants/margin_top = 19
 
 [node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/OppBoard/MarginContainer/HBoxContainer/Center/MarginContainer"]
 layout_mode = 2
@@ -126,7 +130,8 @@ unique_name_in_owner = true
 custom_minimum_size = Vector2(0, 0)
 layout_mode = 2
 
-[node name="Vanguard" parent="VBoxContainer/OppBoard/MarginContainer/HBoxContainer/Center/MarginContainer/VBoxContainer/Circles/Center" instance=ExtResource("3_iu5jy")]
+[node name="OppVanguard" parent="VBoxContainer/OppBoard/MarginContainer/HBoxContainer/Center/MarginContainer/VBoxContainer/Circles/Center" instance=ExtResource("3_iu5jy")]
+unique_name_in_owner = true
 custom_minimum_size = Vector2(0, 0)
 layout_mode = 2
 
@@ -162,6 +167,7 @@ grow_horizontal = 2
 grow_vertical = 2
 rotation = -1.5707964
 pivot_offset = Vector2(294.5, 96.5)
+Separation = null
 
 [node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/OppBoard"]
 layout_mode = 1
@@ -331,12 +337,13 @@ grow_horizontal = 2
 grow_vertical = 2
 rotation = 1.5707964
 pivot_offset = Vector2(294.5, 96.5)
+Separation = null
 
 [node name="Center" type="Control" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer"]
 layout_mode = 2
 size_flags_horizontal = 3
 
-[node name="MarginContainer" type="CenterContainer" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer/Center"]
+[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer/Center"]
 layout_mode = 1
 anchors_preset = 14
 anchor_top = 0.5
@@ -346,6 +353,8 @@ offset_top = -224.0
 offset_bottom = 224.0
 grow_horizontal = 2
 grow_vertical = 2
+theme_override_constants/margin_left = 2
+theme_override_constants/margin_top = 19
 
 [node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer/Center/MarginContainer"]
 layout_mode = 2
@@ -372,7 +381,8 @@ layout_mode = 2
 layout_mode = 2
 theme_override_constants/separation = 20
 
-[node name="Vanguard" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer/Center/MarginContainer/VBoxContainer/Circles/Center" instance=ExtResource("3_iu5jy")]
+[node name="PlayerVanguard" parent="VBoxContainer/PlayerBoard/MarginContainer/HBoxContainer/Center/MarginContainer/VBoxContainer/Circles/Center" instance=ExtResource("3_iu5jy")]
+unique_name_in_owner = true
 custom_minimum_size = Vector2(0, 0)
 layout_mode = 2
 
@@ -434,7 +444,6 @@ grow_horizontal = 2
 [node name="OppHand" parent="Opp Hand" instance=ExtResource("6_iu5jy")]
 unique_name_in_owner = true
 layout_mode = 2
-Separation = -45
 
 [node name="GuardZone" parent="." instance=ExtResource("3_iu5jy")]
 layout_mode = 1
@@ -463,4 +472,3 @@ grow_vertical = 0
 [node name="PlayerHand" parent="PlayerHand" instance=ExtResource("6_iu5jy")]
 unique_name_in_owner = true
 layout_mode = 2
-Separation = -45
